--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,8 +171,15 @@ p{
 }
 
 #content {
-  padding: 50px;
-  margin-top: 120px;
+  background: url(../images/pretty.png) no-repeat center center fixed;
+/*  display: table;*/
+  height: 400px;
+  position: relative;
+  width: 100%;
+/*-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;*/
+  background-size: cover;
 }
 #logo {
   float:left;
@@ -206,9 +213,7 @@ p{
 .navbutton:focus {
   outline: 0;
 }
-#title{
-  margin-left: 40px;
-}
+
 #testp {
   padding: 20px;
   padding-top: 0px;
@@ -251,15 +256,23 @@ p{
     margin-left: -40px;
 }
 
+#habitat{
+
+  height: 250px;
+  padding-top: 200px;
+  padding-right: 400px;
+  font-size: 70px;
+}
+
 #searchbox {
     position: absolute;
     width: 400px;
     height: 30px;
-    top: 180px;
+    top: 70%;
     color: black;
     font-family: sans-serif;
     font-size: 20px;
-    margin-left: -50px;
+    margin-left: -200px;
 }
 
 .twobuttons {
@@ -267,13 +280,13 @@ p{
     width: 100px;
     height: 30px;
     background-color: #C1272D;
-    top: 250px;
+    top: 87%;
     text-align: center;
     color: white;
     font-size: 15px;
     font-family: sans-serif;
     border-radius: 20px;
-    margin-left: 60px;
+    margin-left: -60px;
 
 }
 
@@ -345,7 +358,7 @@ p{
   display: inline-block;
 
 }
-#browse{
+/*#browse{
   max-width: 980px;
   border-radius: 20px;
   padding: 10px;
@@ -353,7 +366,22 @@ p{
   margin-top: -163px;
   background-color: #F3F3F3;
   display: inline-block;
+}*/
+
+.container {
+    width: 100%;
+    /*height: 0px;*/
+/*    position: relative;*/
+    background-color: white;
+    background-size: cover;
+    background-position: center;
 }
+
+#about{
+  /*height: 83.5%;*/
+  width: 100%;
+}
+
 #products{
   border-radius: 20px;
   padding: 10px;
