--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,19 +1,19 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 
 <div>
 
     {{#if boolean}}
-  <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
+  <nav id='nav' class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C">
 
     <a class="navbar-brand navbar nav" href="/home"</a>
-      <img src="/images/webbeaver.png" width="90" height="40" class="d-inline-block" alt="">
+      <img id='navlogo' src="/images/navbarlogo.png" height="40" class="d-inline-block" alt="">
 
     </a>
 
@@ -25,6 +25,18 @@
 
     <div class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-right original">
+          <li class="nav-item">
+            <a class="nav-link" href="/clothes">Clothes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tech">Tech</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
           <!-- ******** NEW ITEM ********  -->
           <li class="nav-item">
             <!-- Trigger the modal with a button -->
@@ -81,7 +93,7 @@
           </li>
         </ul>
       </div>
-      <div class="collapse navbar-collapse navHeaderCollapse textin">
+      <!-- <div class="collapse navbar-collapse navHeaderCollapse textin">
           <ul class="nav navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/clothes">Clothes</a>
@@ -96,11 +108,7 @@
             <a class="nav-link" href="/furniture">Furniture</a>
           </li>
         </ul>
-
-      </div>
-      </div>
-        </div>
-
+      </div> -->
     </nav>
 
   {{else}}
@@ -108,7 +116,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
     <a class="navbar-brand navbar nav" href="/"</a>
-      <img src="/images/webbeaver.png" width="90" height="40" class="d-inline-block" alt="">
+      <img id='navlogo' src="/images/navbarlogo.png" height="40" class="d-inline-block" alt="">
     </a>
 
     <button class = 'navbar-toggle' data-toggle = 'collapse' data-target = '.navHeaderCollapse'>
@@ -120,15 +128,27 @@
     <div class="collapse navbar-collapse navHeaderCollapse">
 
 
-      <form class="navbar-form navbar-left" method="post" action="/searchresults">
+<!--       <form class="navbar-form navbar-left" method="post" action="/searchresults">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="find items" name="term">
         </div>
         <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-      </form> 
+      </form>  -->
 
 
       <ul class="nav navbar-nav navbar-right original">
+        <li class="nav-item">
+            <a class="nav-link" href="/clothes">Clothes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tech">Tech</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/furniture">Furniture</a>
+        </li>
 
     <!-- ******** LOGIN ********  -->
         <li class="nav-item">
@@ -223,7 +243,7 @@
       </ul>
 
     </div>
-    <div class="collapse navbar-collapse navHeaderCollapse textin">
+    <!-- <div class="collapse navbar-collapse navHeaderCollapse textin">
           <ul class="nav navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/clothes">Clothes</a>
@@ -239,7 +259,7 @@
           </li>
         </ul>
 
-      </div>
+      </div> -->
 
 </nav>
 
