--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,14 +13,14 @@
 
 
   
-
-    <div id="content">
-      <h1 id="habitat">Find dank shit.</h1>
-      <form id="search" method='post' action="/searchresults">
-        <input class="inputbox" id="searchbox" type="text"  placeholder="find items" name="term">
-        <input class="twobuttons" id="go" type="submit" value="+ +" >
-      </form>
-    </div>
+    
+      <div id="content">
+        <h1 id="habitat">Find dank shit.</h1>
+        <form id="searching" method='post' action="/searchresults">
+            <input class="inputbox" id="searchboxhome" type="text"  placeholder="what are you looking for?" name="term">
+            <input class="line" id="go" type="submit" value="+ +" style="left: 300px;">
+        </form>
+      </div>
       <!-- <div id="categories">
         <u>Search by category</u><br>
         <a href="/clothes">clothes</a><br>
