--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -5,42 +5,13 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      $( document ).ready(function() {
-        $.getJSON("api/user_data", function(data) {
-          // Make sure the data contains the username as expected before using it
-          if (data.hasOwnProperty('username')) {
-            socket.emit('chat message', data.username + ' connected');
-          } else {
-            socket.emit('chat message', 'unregistered user connected');
-          };
-        });
-        var socket = io();
-        $('form').submit(function(){
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-        socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
-        });
-      });
-    </script>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 20px; margin-bottom: 60px;position:fixed; bottom: 0;padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
+    <script src='scripts/chat.js'></script>
+    <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" placeholder="enter a message" /><button>Send</button>
     </form>
   </body>
 </html>
