--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src='scripts/chat.js'></script>
     <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
