some nav-bar fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -176,8 +176,8 @@ p{
   height: 400px;
   position: relative;
   width: 100%;
-  background-size: 100% 400px;
-/*-webkit-background-size: cover;
+/*  background-size: 100% 400px;
+*//*-webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;*/
 
