--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,6 +8,39 @@
 
 
 <div>
+                  <div class="modal fade" id="newitem" role="dialog">
+                    <div class="modal-dialog">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+<!--                           <h1>Post a new item</h1>
+ -->                          <div id="itemform">
+                            <form method="post" action="/uploaditem" enctype="multipart/form-data">
+                            <input id="itemname" class='inputbox' type='text' maxlength="15" placeholder='item name' name='itemname' required> 
+                            &#36;&#32;<input id='price' class='inputbox' type="number" placeholder='price' name='price' required>
+                            <br>
+                            <textarea id='description' rows="8" placeholder='description' name='description' cols="50" required></textarea> <br>
+                            
+                            <select id='category' name = 'category' required>
+                              <option value="clothes">Clothes</option>
+                              <option value="book">Books</option>
+                              <option value="tech">Tech</option>
+                              <option value="furniture">Furniture</option>
+                            </select>
+
+                            <input id="inserttag" class='inputbox' type='text' placeholder='add tags' name='inserttag'>
+                            <button id="addtag" class="contentbutton" type='button'>add</button><br>
+                            <div id="tags"></div>
+
+                            <input type="file" name="picture" />
+
+                            <button id="submititem" class="contentbutton" type = 'submit' >list it!</button>&#32;
+                            <button type="button" class="contentbutton" data-dismiss="modal">cancel</button><br>
+                            </form>
+                        </div>
+                        <script src="/scripts/addtag.js"></script>
+                      </div>
+                    </div>
+                    </div>
 
     {{#if boolean}}
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
@@ -79,47 +112,18 @@
               </div>
               </div> -->
 
+
+
+
           <li class="nav-item">
-            <div class="dropdown">
-              <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Welcome, {{firstname}}!
-              <span class="caret"></span></button>
+             <a class="nav-link dropdown-toggle" tpe= "button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Welcome, {{firstname}}!</a>
+<!--               <button class="btn nav-link dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Welcome, {{firstname}}!
+              <span class="caret"></span></button> -->
               <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                 <a data-toggle="modal" data-target="#newitem">List an Item</a>
+<!--                  <a data-toggle="modal" data-target="#newitem">List an Item</a> -->
+                 <li role="presentation"><a data-toggle="modal" data-target="#newitem">List an Item</a></li>
 
             <!-- Modal -->
-                  <div class="modal fade" id="newitem" role="dialog">
-                    <div class="modal-dialog">
-                      <!-- Modal content-->
-                      <div class="modal-content">
-                          <h1>Post a new item</h1>
-                          <div id="itemform">
-                            <form method="post" action="/uploaditem" enctype="multipart/form-data">
-                            <input id="itemname" class='inputbox' type='text' maxlength="15" placeholder='item name' name='itemname' required> 
-                            &#36;&#32;<input id='price' class='inputbox' type="number" placeholder='price' name='price' required>
-                            <br>
-                            <textarea id='description' rows="8" placeholder='description' name='description' cols="50" required></textarea> <br>
-                            
-                            <select id='category' name = 'category' required>
-                              <option value="clothes">Clothes</option>
-                              <option value="book">Books</option>
-                              <option value="tech">Tech</option>
-                              <option value="furniture">Furniture</option>
-                            </select>
-
-                            <input id="inserttag" class='inputbox' type='text' placeholder='add tags' name='inserttag'>
-                            <button id="addtag" class="contentbutton" type='button'>add</button><br>
-                            <div id="tags"></div>
-
-                            <input type="file" name="picture" />
-
-                            <button id="submititem" class="contentbutton" type = 'submit'>list it!</button>&#32;
-                            <button type="button" class="contentbutton" onclick="location.href='/home'">cancel</button><br>
-                            </form>
-                        </div>
-                        <script src="/scripts/addtag.js"></script>
-                      </div>
-                    </div>
-                    </div>
            
                 <li role="presentation"><a class="nav-link" href="/starreditems">Starred Items</a></li>
                 <li role="presentation"><a class="nav-link" href="/profile">Profile</a></li>
@@ -127,27 +131,12 @@
                 <li role="presentation" class="divider"></li>
                 <li role="presentation"><a class="nav-link" href="/logout">Logout</a></li>
               </ul>
-            </div>
+
+         
           </li>
         </ul>
       </div>
-      <<!-- div class="collapse navbar-collapse navHeaderCollapse textin">
-          <ul class="nav navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/clothes">Clothes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/books">Books</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tech">Tech</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/furniture">Furniture</a>
-          </li>
-        </ul>
 
-      </div> -->
     </nav>
 
   {{else}}
