some nav-bar fixes

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -46,7 +46,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
     <a class="navbar-brand navbar nav" href="/home"</a>
-      <img src="/images/webbeaver.png" width="90" height="40" class="d-inline-block" alt="">
+      <img src="/images/navbarlogo.png" width="90" height="40" class="d-inline-block" alt="">
 
     </a>
 
@@ -71,6 +71,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Browse</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right original">
@@ -144,7 +147,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
     <a class="navbar-brand navbar nav" href="/"</a>
-      <img src="/images/webbeaver.png" width="90" height="40" class="d-inline-block" alt="">
+      <img src="/images/navbarlogo.png" width="140" height="40" class="d-inline-block" alt="">
     </a>
 
     <button class = 'navbar-toggle' data-toggle = 'collapse' data-target = '.navHeaderCollapse'>
@@ -170,6 +173,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/furniture">Furniture</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Browse</a>
         </li>
       </ul>
       <!-- Trigger the modal with a button -->
