--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,15 +12,24 @@
     {{> navbar}}
 
 
-  
-
+<div id="centerline" class="centerline">
+    <div id="content" class="content"> 
+        <img src="/images/webbeaver-newfont.png" id="logohome">
+        <form id="search" method='post' action="/searchresults">
+            <input class="inputbox" id="searchboxhome" type="text"  placeholder="what are you looking for?" name="term">
+            <input class="twobuttonshome" id="go" type="submit" value="+ +" style="left: 300px;">
+        </form>
+    </div>
+  </div>
+    
+<!-- 
     <div id="content">
       <h1 id="habitat">Find dank shit.</h1>
       <form id="search" method='post' action="/searchresults">
         <input class="inputbox" id="searchbox" type="text"  placeholder="find items" name="term">
         <input class="twobuttons" id="go" type="submit" value="+ +" >
       </form>
-    </div>
+    </div> -->
       <!-- <div id="categories">
         <u>Search by category</u><br>
         <a href="/clothes">clothes</a><br>
