--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -180,6 +180,10 @@
       </ul>
       <!-- Trigger the modal with a button -->
       <ul class="nav navbar-nav navbar-right original">
+
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About Us</a>
+        </li> 
         <li class="nav-item">
           <a data-toggle="modal" data-target="#login">Login</a>
 
