--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,23 +170,85 @@ p{
 
 }
 
-#content {
-  background: url(../images/long-background2.png) no-repeat center right fixed;
-/*  display: table;*/
+.centerline{
+  background: url(/images/long-background.png) no-repeat center center fixed;
+  display: table;
   height: 400px;
   position: relative;
   width: 100%;
+/*-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;*/
+  background-size: 100% 450px;
+
+}
+
+.content {
+
+    position: absolute;
+    width: 300px;
+    height: 200px;
+/*    top: 50%;*/
+    margin-top: 150px;
+/*    left: 50%;
+*/  margin-left: 0px;
+}
 /*  background-size: 100% 400px;
 *//*-webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;*/
 
+
+#logohome {
+    position: absolute;
+    height: 142px;
+    width: 350px;
+    left: 15%;
+    top: 108px;
+    margin-left: 40px;
 }
-#logo {
-  float:left;
-  padding: 10px;
-  display: inline-block;
+
+#searchboxhome {
+    position: absolute;
+    color: #000;
+    width: 185px;
+    height: 23px;
+    top: 165px;
+    border: none;
+    border-bottom: solid 1px #6C6C6C;
+    background:transparent;
+    font-family: sans-serif;
+    font-size: 15.4px;
+    margin-left: -70px;
 }
+#searchboxhome:focus {
+  outline:none;
+}
+
+
+.twobuttonshome {
+  border: none;
+    position: absolute;
+    width: 77px;
+    height: 23px;
+    background-color: #C1272D;
+    top: 220px;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    font-family: sans-serif;
+    border-radius: 20px;
+    margin-left: -50px;
+
+}
+.twobuttonshome:focus {
+  outline:none;
+
+}
+.twobuttonshome:hover {
+  background-color: #a1282d
+}
+
 #hometext{
   font-size: 200%;
   padding: 10px;
@@ -247,6 +309,7 @@ p{
     left: 50%;
     margin-left: -375px;
 }
+
 
 
 
