chat stuff/logo

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -46,7 +46,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
     <a class="navbar-brand navbar nav" href="/home"</a>
-      <img src="/images/navbarlogo.png" width="90" height="40" class="d-inline-block" alt="">
+      <img src="/images/newbeaverlogo.png" width="40" height="40" style='margin-right: 10px' class="d-inline-block" alt="">
 
     </a>
 
@@ -147,7 +147,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #47474C;">
 
     <a class="navbar-brand navbar nav" href="/"</a>
-      <img src="/images/navbarlogo.png" width="140" height="40" class="d-inline-block" alt="">
+      <img src="/images/newbeaverlogo.png" width="40" height="40" style='margin-right: 10px' class="d-inline-block" alt="">
     </a>
 
     <button class = 'navbar-toggle' data-toggle = 'collapse' data-target = '.navHeaderCollapse'>
