--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src='scripts/chat.js'></script>
+    <script src='/scripts/chat.js'></script>
     <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
