--- a/views/userlist.hbs
+++ b/views/userlist.hbs
@@ -1,18 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <title>talk to someone</title>
+    <title>userlist</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
-  <h1 style='padding:10px'> start a convo with any of these lovely ppl </h1>
+  <h1 style='padding:10px'> All Users </h1>
   {{#each users}}
-    {{> chat_user}}
+    {{> user_partial}}
   {{/each}}
   </body>
-  <script src='/scripts/selectuser.js'></script>
 </html>
