--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,7 +171,8 @@ p{
 }
 
 .centerline{
-  background: url(/images/long-background.png) no-repeat center center fixed;
+  background: url(/images/long-background2.png) fixed;
+
   display: table;
   height: 400px;
   position: relative;
@@ -199,10 +200,19 @@ p{
 -o-background-size: cover;*/
 
 
-#logohome {
+/*#logohome {
     position: absolute;
     height: 142px;
     width: 350px;
+    left: 15%;
+    top: 108px;
+    margin-left: 40px;
+}*/
+
+#logohome2 {
+    position: absolute;
+    height: 142px;
+    width: 118px;
     left: 15%;
     top: 108px;
     margin-left: 40px;
@@ -213,16 +223,21 @@ p{
     color: #000;
     width: 185px;
     height: 23px;
-    top: 165px;
+    top: 135px;
     border: none;
     border-bottom: solid 1px #6C6C6C;
     background:transparent;
     font-family: sans-serif;
     font-size: 15.4px;
-    margin-left: -70px;
+    margin-left: -65px;
 }
 #searchboxhome:focus {
   outline:none;
+}
+
+#welcomehome{
+  color: #C2272D;
+
 }
 
 
@@ -232,13 +247,13 @@ p{
     width: 77px;
     height: 23px;
     background-color: #C1272D;
-    top: 220px;
+    top: 200px;
     text-align: center;
     color: white;
     font-size: 12px;
     font-family: sans-serif;
     border-radius: 20px;
-    margin-left: -50px;
+    margin-left: -48px;
 
 }
 .twobuttonshome:focus {
