--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,8 +13,9 @@
 
 
 <div id="centerline" class="centerline">
-    <div id="content" class="content"> 
-        <img src="/images/webbeaver-newfont.png" id="logohome">
+    <div id="content" class="content">
+    <h1 id = 'welcomehome'>Buy, sell, or just browse.</h1>
+    <img src="/images/beaverlogo2.png" id="logohome2">
         <form id="search" method='post' action="/searchresults">
             <input class="inputbox" id="searchboxhome" type="text"  placeholder="what are you looking for?" name="term">
             <input class="twobuttonshome" id="go" type="submit" value="+ +" style="left: 300px;">
