--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
-    <h1>{{id}}</h1>
+    <h1>{{users}}</h1>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" placeholder="enter a message" /><button>Send</button>
