--- a/views/general-chat.hbs
+++ b/views/general-chat.hbs
@@ -4,7 +4,7 @@
     <title>chat</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src='/scripts/chat.js'></script>
+    <script src='/scripts/general-chat.js'></script>
     <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
