--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,8 +187,8 @@ p{
 .content {
 
     position: absolute;
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 400px;
 /*    top: 50%;*/
     margin-top: 150px;
 /*    left: 50%;
@@ -215,7 +215,7 @@ p{
     width: 118px;
     left: 15%;
     top: 108px;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 #searchboxhome {
@@ -223,13 +223,13 @@ p{
     color: #000;
     width: 185px;
     height: 23px;
-    top: 135px;
+    top: 125px;
     border: none;
     border-bottom: solid 1px #6C6C6C;
     background:transparent;
     font-family: sans-serif;
     font-size: 15.4px;
-    margin-left: -65px;
+    margin-left: -85px;
 }
 #searchboxhome:focus {
   outline:none;
@@ -237,7 +237,14 @@ p{
 
 #welcomehome{
   color: #C2272D;
+  margin-left: 200px;
+  font-size: 50px;
+  position: absolute;
 
+}
+
+#grouped{
+  position: absolute;
 }
 
 
@@ -247,13 +254,13 @@ p{
     width: 77px;
     height: 23px;
     background-color: #C1272D;
-    top: 200px;
+    top: 190px;
     text-align: center;
     color: white;
     font-size: 12px;
     font-family: sans-serif;
     border-radius: 20px;
-    margin-left: -48px;
+    margin-left: -70px;
 
 }
 .twobuttonshome:focus {
