--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,46 +25,22 @@
     </div>
   </div>
     
-<!-- 
-    <div id="content">
-      <h1 id="habitat">Find dank shit.</h1>
-      <form id="search" method='post' action="/searchresults">
-        <input class="inputbox" id="searchbox" type="text"  placeholder="find items" name="term">
-        <input class="twobuttons" id="go" type="submit" value="+ +" >
-      </form>
-    </div> -->
-      <!-- <div id="categories">
-        <u>Search by category</u><br>
-        <a href="/clothes">clothes</a><br>
-        <a href="/books">books</a><br>
-        <a href="/tech">tech</a><br>
-        <a href="/furniture">furniture</a><br>
-      </div> -->
 
-    <div id="about" class="pad-section">
-      <div class="container">
-            <h1 id = 'welcome'>
-                <div id="browse">
-                  {{#each starItems}}
-                    {{> starred_item_partial}}
-                  {{/each }}
-                  {{#each otherItems}}
-                    {{> unstarred_item_partial}}
-                  {{/each }}
-                </div>
-            </h1>
+
+    <h1 id = 'typeofsell'> Welcome
+    <div id="flexbox" class="pad-section">
+        <div id="browse">
+          {{#each starItems}}
+            {{> starred_item_partial}}
+          {{/each }}
+          {{#each otherItems}}
+            {{> unstarred_item_partial}}
+          {{/each }}
+        </div>
+      </h1>
        
-      </div>
     </div>
-<!--     <div id="browse">
-      {{#each starItems}}
-        {{> starred_item_partial}}
-      {{/each }}
-      {{#each otherItems}}
-        {{> unstarred_item_partial}}
-      {{/each }}
-    </div> -->
-    
+
   <script src="/scripts/sortby.js"></script>
   <script src="/scripts/staritem.js"></script>
   </body>
