--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -2,12 +2,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 -->
-<div class="product">
-  <div>
-    <a id="productcontent" data-toggle="modal" data-target="#{{itemname}}">{{itemname}}</a>
-    <img src="/uploads/{{picture}}" />
-  </div>
 
+  <div class="product" data-toggle="modal" data-target="#{{itemname}}">
+<!--   <div class="productbox"> -->
+    <img id=forsale src="/uploads/{{picture}}" />
+    <div class='contentinbox'>
+      <p align="left" id="productcontent" >{{itemname}}</p>
+      <p align="right" id="productcontent3">${{price}}</p>
+      <p align="left" id="productcontent2">{{user}}</p>
+
+
+    </div>
+    
+  </div>
   <!-- Modal -->
   <div class="modal fade" id="{{itemname}}" role="dialog">
     <div class="modal-dialog">
