--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -463,7 +463,7 @@ p{
   color: #C2272D;
   margin-top: 30px;
   font-size: 50px;
-  position: absolute;
+  position: absolute center;
 }
 
 #products{
