--- a/views/home.hbs
+++ b/views/home.hbs
@@ -37,7 +37,8 @@
             {{> unstarred_item_partial}}
           {{/each }}
         </div>
-      </h1>
+    </div>
+    </h1>
        
     </div>
 
