--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -212,18 +212,16 @@
 
                 </ul>
               </form>
-              <form name = 'forgotpassword' method = 'post' action = '/forgot'>
-                  <ul>
-                  <li> <button class = "btn btn-default" type = 'submit'> Forgot password? </button></li>
-                  <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'recoveremail' name = 'recoveremail'> </li>
-                  </ul>
-              </form>
+
             </div>
             </div>
           
             </div>
             </div>
             </li>
+
+
+
 
     <!-- ******** SIGN UP ********  -->
 
@@ -280,6 +278,28 @@
                 </div>
               </div>
               </li>
+
+              <li class="nav-item">
+    <a data-toggle="modal" data-target="#forgotpassword">Forgot Password</a>
+    <div class = 'modal fade' id = 'forgotpassword' role = 'dialog' tabindex = '-1' aria-hidden = 'true'>
+    <div class = 'modal-dialog'>
+    <div class = 'modal-content'>
+    <div class = 'modal-header'>
+    <button type = 'button' class = 'close' data-dismiss='modal'>&times;</button>
+    <h4 class = 'modal-title'>Forgot Password</h4>
+    </div>
+    <div class = 'modal-body'>
+      <form name = 'forgotpassord' method = 'post' action = '/forgot'>
+      <ul>
+      <li> <input style = 'font-size:14pt; padding: 4px; margin:7px' type = 'text' placeholder = 'recovery email' name = 'recoveremail'> </li> 
+      <li> <button class = 'btn btn-default' type = 'submit'> Send Email </button> </li>
+      </ul>
+      </form>
+      </div>
+      </div>
+      </div>
+      </div>
+      </li>
               
 
       </ul>
