--- a/views/reset.hbs
+++ b/views/reset.hbs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Password Recovery</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
+	<title> Welcome to Password Recovery</title>
 </head>
 <body>
 <form name = 'resetpassword' action = '/reset/{{ token }}' method = 'post'>
@@ -9,7 +12,7 @@
 <li>
 <input type = 'password' name = 'password' placeholder = 'password'>
 </li>
-<li><button class="button" type = 'submit'>Login</button></li>
+<li><button class="button" type = 'submit'>Reset Password</button></li>
 </ul>
 </form>
 </body>
