functional non-realtime chat

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -6,7 +6,7 @@ form {
   padding: 10px; 
   position: fixed; 
   bottom: 0; 
-  width: 100%; 
+  right: 15px; 
 }
 
 form input { 
@@ -30,20 +30,41 @@ form button {
   padding: 10px; 
   display: inline-block;
 }
-
-#messages { 
+#messages {
   list-style-type: none; 
-  margin: 20px; 
-  margin-bottom: 60px;
-  position:fixed; 
-  bottom: 0;
-  padding: 0; 
+  overflow:   auto;
+  position:   absolute;
+  right: 60px;
+  bottom: 60px;
+  width: 365px;
+  max-height: 85%;
 }
+
 
 #messages li { 
   padding: 5px 10px; 
+  max-width: 365px;
+  word-wrap: break-word;
 }
 
 #messages li:nth-child(odd) { 
   background: #eee; 
+}
+
+#convos {
+  background-color: #ccc;
+  width: 40%;
+  padding: 15px;
+}
+#nochat {
+  position: fixed;
+  right: 60px;
+  bottom: 60px;
+  width: 365px;
+  height: 85%;
+}
+#users {
+  position: fixed;
+  right: 60px;
+  top: 60px;
 }
