--- a/views/partials/chatbox.hbs
+++ b/views/partials/chatbox.hbs
@@ -8,15 +8,20 @@
     <link rel="stylesheet" href='/stylesheets/chat.css'>
   </head>
   <body>
-    <h1 id='users'>chat users: {{users}}</h1>
+    <!-- <h1 id='users'>chat users: {{users}}</h1> -->
     <div class='chatid' id={{chatid}}></div>
     <ul id="messages">
       {{#each existing_messages}}
-        <li>{{message}}</li>
+        {{#if from_current_user}}
+          <li id='from-user'>{{message}}</li>
+        {{else}}
+          <li id='from-other'>{{message}}</li>
+        {{/if}}
       {{/each}}
     </ul>
     <form action="">
       <input id="m" autocomplete="off" placeholder="enter a message" /><button>Send</button>
     </form>
   </body>
+  <script src='/scripts/chat.js'></script>
 </html>
