--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -152,14 +152,15 @@
               <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
 <!--                  <a data-toggle="modal" data-target="#newitem">List an Item</a> -->
                  <li role="presentation"><a data-toggle="modal" data-target="#newitem">List an Item</a></li>
-                 <li role = 'presentation'><a data-toggle = 'modal' data-target = '#updateprofile'>Update Account</a></li>
+                 
 
             <!-- Modal -->
            
                 <li role="presentation"><a class="nav-link" href="/starreditems">Starred Items</a></li>
                 <li role="presentation"><a class="nav-link" href="/profile">Profile</a></li>
-                
+                <li role="presentation"><a class="nav-link" href="/chat">Messages</a></li>
                 <li role="presentation"><a class="nav-link" href="/manageitems">Manage Items</a></li>
+                <li role = 'presentation'><a data-toggle = 'modal' data-target = '#updateprofile'>Update Account</a></li>
                 <li role="presentation" class="divider"></li>
                 <li role="presentation"><a class="nav-link" href="/logout">Logout</a></li>
               </ul>
