--- a/views/partials/new_chat_user.hbs
+++ b/views/partials/new_chat_user.hbs
@@ -1,3 +1,3 @@
-<button type='button' class='selectuser' style='padding:10px' href="/startchat" id="{{username}}">
+<button class='userbutton' type='button' class='selectuser' style='padding:10px' href="/startchat" id="{{username}}">
   {{firstname}} {{lastname}} ({{username}})
-</button> <br><br>
+</button> <br><br><br>
