--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -1,4 +1,4 @@
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 -->
@@ -28,7 +28,7 @@
           <h5 class='modal-price'>${{price}}</h5>
           <!-- &#36;&#32;  -->
         </div>
-        
+
 
         <div class="modal-body">
           <img height='200px' width = '60%' id= 'model-image' src="/uploads/{{picture}}" />
@@ -47,9 +47,9 @@
       </div>
       
     </div>
-  </div>
+<!--   </div>
   
-</div>
+</div> -->
 
 <!-- 
 <div class="product">
@@ -74,4 +74,4 @@
       <div style="display:none" class='id' id="{{id}}"></div>
     </div>
   </div>
-</div> -->
+</div> 
