--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,13 +36,14 @@
           {{#each otherItems}}
             {{> unstarred_item_partial}}
           {{/each }}
-        </div>
-    </div>
+      <!--   </div> -->
     </h1>
        
   
 
   <script src="/scripts/sortby.js"></script>
   <script src="/scripts/staritem.js"></script>
+</div>
+ </h1>
   </body>
 </html>
