--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -1,10 +1,10 @@
 <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+-->
 
   <div class="product" data-toggle="modal" data-target="#{{itemname}}">
- <div class="productbox"> -->
+<!--   <div class="productbox"> -->
     <img id=forsale src="/uploads/{{picture}}" />
     <div class='contentinbox'>
       <p align="left" id="productcontent" >{{itemname}}</p>
