--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,9 +79,9 @@ body.modal-open div.modal-backdrop {
 /*  height: 140px;
   width: 194px;*/
 
-.modal-image{
-  height:50px;
-
+.model-image{
+  max-width: 300px;
+  max-height: 230px;
 }
 
 .post-modal{
@@ -455,13 +455,7 @@ p{
 
 }
 /*#browse{
-  max-width: 980px;
-  border-radius: 20px;
-  padding: 10px;
-  margin-left: 240px;
-  margin-top: -163px;
-  background-color: #F3F3F3;
-  display: inline-block;
+  flex:auto;
 }*/
 
 .container {
@@ -478,8 +472,9 @@ p{
   margin-top: 30px;
   width: 100%;
   display: flex;
-  flex-direction: row ltr;
-  flex-wrap: nowrap ltr;
+/*  flex-flow: row wrap;*/
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
 
 
@@ -504,8 +499,9 @@ p{
 }
 
 #forsale{
-  height: 140px;
-  width: 194px;
+  max-height: 140px;
+  max-width: 174px;
+  flex:auto;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 
@@ -549,6 +545,10 @@ p{
   margin-right: 2px;
   margin-top: 11px;
 /*  margin-left: 2px;*/
+}
+
+.contentinbox{
+  top:50px;
 }
 
 
